# Npatch

./: .gitignore  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  Makefile.in  NEWS  README  README.md  config.h.in  config.h.in.cmake  configure  configure.ac  npatchlib-config.in  npt-config.in  npt-config.in.cmake
Examples/: Makefile.am  Makefile.in  README  fan.stl  stl2npt.cxx
Examples/c_example/: main.c  make.sh
Examples/fortran_example/: main.F90  main.f90  make.sh
autom4te.cache/: output.0  requests  traces.0  traces.1
doc/: CMakeLists.txt  Makefile.am  Makefile.in
doc/doxygen/: Doxyfile
include/: CalcGeo.h  CalcGeo_Matrix.h  FNpt.h  NpatchVersion.h.in  Npt.h  npt_Array.h  npt_Data.h  npt_Face.h  npt_IOforStl.h  npt_MeshPatch.h  npt_Utility.h  npt_Vector.h  npt_Version.h  npt_Version.h.in  npt_Vertex.h
src/: CMakeLists.txt  FNpt.cxx  Makefile.am  Makefile.in  Makefile_hand  Npt.cxx  depend.inc  make_setting  npt_Data.cxx  npt_Face.cxx  npt_IOforStl.cxx  npt_MeshPatch.cxx  npt_Vector.cxx  npt_Vertex.cxx
