###################################################################################
#
# NpatchLib - Nagata Patch Library
#
# Copyright (c) 2015 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
###################################################################################

doc_includedir = $(prefix)/doc
doc_include_HEADERS =
#    $(top_srcdir)/doc/Npatch_ug_jp.pdf

#dist_data_DATA = doxygen/Doxyfile
