###
###################################################################################
#
# NpatchLib - Nagata Patch Library
#
# Copyright (c) 2015-2016 Advanced Institute for Computational Science, RIKEN.
# All rights reserved.
#
###################################################################################
###

lib_LIBRARIES = libNpatch.a

libNpatch_a_CXXFLAGS = -I$(top_srcdir)/include

libNpatch_a_SOURCES = Npt.cxx FNpt.cxx

NPT_includedir = $(includedir)

NPT_include_HEADERS = \
   $(top_srcdir)/include/Npt.h \
   $(top_srcdir)/include/FNpt.h \
   $(top_srcdir)/include/CalcGeo.h \
   $(top_srcdir)/include/CalcGeo_Matrix.h \
   $(top_srcdir)/include/npt_Version.h
